# leftovers

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROTOCOL.md  README.md  SECURITY.md  pyproject.toml
.agent/: CONTINUITY.md
config/: leftovers.example.toml  macos-preview.template.toml
docs/: AGENT_ADAPTERS.md  BUDGET_ADAPTERS.md  CODEX_CLI.md  CODEX_CLI_MEDIATOR.md  DOCKER_SANDBOXES.md  GITHUB_INTEGRATION.md  MACOS_PACKAGE.md  OPERATIONS.md  REPOSITORY_CURATION.md  STRICT_VM_BROKER.md  STRICT_VM_CYCLE.md  TELEMETRY.md
examples/: issues.json
sandbox/: Dockerfile  Rehearsal.Dockerfile
schedules/: scheduler.env.example
schemas/: adapter-telemetry.schema.json  agent-result.schema.json  codex-implementation.schema.json  codex-planning.schema.json  codex-provider-envelope.schema.json  codex-review.schema.json  run-outcome.schema.json  strict-vm-action-batch.schema.json  strict-vm-guest-result.schema.json  strict-vm-manifest.schema.json  strict-vm-receipt.schema.json  strict-vm-request.schema.json
scripts/: build_macos_package.py  codex_adapter.py  install-macos.sh  install_macos.py  macos_job.py  package_smoke.py  rehearsal_agent.py  run-cycle.sh  sbx-rehearsal.sh  status-macos.sh  status_macos.py  uninstall-macos.sh  uninstall_macos.py  verify_macos_package.py
src/: __main__.py
templates/: pull-request.md
tests/: test_audit_workspace.py  test_budget.py  test_cancellation_topology.py  test_cli.py  test_codex_adapter.py  test_codex_cli_mediator.py  test_config.py  test_dashboard.py  test_github.py  (+37 more)
(+88 files in other folders)
