[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "leftovers-agent"
version = "0.1.0"
description = "Turn deliberately allocated, otherwise-unused agent quota into careful open-source contributions."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Leftovers contributors" }]
dependencies = []

[project.scripts]
leftovers = "leftovers.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leftovers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
